<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Advanced">


    <TextView
        android:id="@+id/screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_gravity="end"
        android:textSize="45sp"
        android:textAlignment="textEnd"
        android:layout_columnWeight="1"
        android:layout_columnSpan="4"
        android:layout_rowWeight="1"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/btn_bksp"
        style="@style/Button"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/buttonBksp"
        android:onClick="bkspClicked"/>
    <Button
        android:id="@+id/btn_clear"
        style="@style/Button"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:text="@string/buttonC"
        android:onClick="CClick"/>

    <Button
        android:id="@+id/btn_negate"
        style="@style/Button"
        android:layout_column="3"
        android:layout_row="2"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/buttonZnak"
        android:onClick="plusMinusClicked"/>
    <!---->
    <Button
        android:id="@+id/btn_operation_sin"
        style="@style/Button"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/buttonSinus"
        android:onClick="pressButton"/>
    <Button
        android:id="@+id/btn_operation_cos"
        style="@style/Button"
        android:layout_column="1"
        android:layout_row="3"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/buttonCosinus"
        android:onClick="pressButton"/>
    <Button
        android:id="@+id/btn_operation_tan"
        style="@style/Button"
        android:layout_column="2"
        android:layout_row="3"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/buttonTangens"
        android:onClick="pressButton"/>
    <Button
        android:id="@+id/btn_operation_ln"
        style="@style/Button"
        android:layout_column="3"
        android:layout_row="3"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/buttonLogNat"
        android:onClick="pressButton"/>
    <!---->
    <Button
        android:id="@+id/btn_operation_sqrt"
        style="@style/Button"
        android:layout_column="0"
        android:layout_row="4"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/buttonSQRT"
        android:onClick="pressButton"/>
    <Button
        android:id="@+id/btn_operation_power_two"
        style="@style/Button"
        android:layout_column="1"
        android:layout_row="4"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/buttonKwadrat"
        android:onClick="pressButton"/>
    <Button
        android:id="@+id/btn_operation_power_y"
        style="@style/Button"
        android:layout_column="2"
        android:layout_row="4"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/buttonPotega"
        android:onClick="pressButton"/>
    <Button
        android:id="@+id/btn_operation_log"
        style="@style/Button"
        android:layout_column="3"
        android:layout_row="4"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/buttonLog"
        android:onClick="pressButton" />
    <!---->
    <Button
        android:id="@+id/btn_number_7"
        style="@style/Button"
        android:layout_column="0"
        android:layout_row="5"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/button7"
        android:onClick="pressButton"/>
    <Button
        android:id="@+id/btn_number_8"
        style="@style/Button"
        android:layout_column="1"
        android:layout_row="5"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/button8"
        android:onClick="pressButton"/>
    <Button
        android:id="@+id/btn_number_9"
        style="@style/Button"
        android:layout_column="2"
        android:layout_row="5"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/button9"
        android:onClick="pressButton"/>
    <Button
        android:id="@+id/btn_operation_divide"
        style="@style/Button"
        android:layout_column="3"
        android:layout_row="5"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/buttonDzielenie"
        android:onClick="pressButton"/>
    <!---->
    <Button
        android:id="@+id/btn_number_4"
        style="@style/Button"
        android:layout_column="0"
        android:layout_row="6"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/button4"
        android:onClick="pressButton"/>
    <Button
        android:id="@+id/btn_number_5"
        style="@style/Button"
        android:layout_column="1"
        android:layout_row="6"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/button5"
        android:onClick="pressButton"/>
    <Button
        android:id="@+id/btn_number_6"
        style="@style/Button"
        android:layout_column="2"
        android:layout_row="6"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/button6"
        android:onClick="pressButton"/>
    <Button
        android:id="@+id/btn_operation_multiply"
        style="@style/Button"
        android:layout_column="3"
        android:layout_row="6"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/buttonMnozenie"
        android:onClick="pressButton"/>
    <!---->
    <Button
        android:id="@+id/btn_number_1"
        style="@style/Button"
        android:layout_column="0"
        android:layout_row="7"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/button1"
        android:onClick="pressButton"/>
    <Button
        android:id="@+id/btn_number_2"
        style="@style/Button"
        android:layout_column="1"
        android:layout_row="7"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/button2"
        android:onClick="pressButton"/>
    <Button
        android:id="@+id/btn_number_3"
        style="@style/Button"
        android:layout_column="2"
        android:layout_row="7"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/button3"
        android:onClick="pressButton"/>
    <Button
        android:id="@+id/btn_operation_minus"
        style="@style/Button"
        android:layout_column="3"
        android:layout_row="7"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/buttonOdejmowanie"
        android:onClick="pressButton"/>
    <!---->
    <Button
        android:id="@+id/btn_number_0"
        style="@style/Button"
        android:layout_column="0"
        android:layout_row="8"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/button0"
        android:onClick="pressButton"/>
    <Button
        android:id="@+id/btn_operation_dot"
        style="@style/Button"
        android:layout_column="1"
        android:layout_row="8"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/buttonKropka"
        android:onClick="dotClicked"/>
    <Button
        android:id="@+id/btn_operation_equal"
        style="@style/Button"
        android:layout_column="2"
        android:layout_row="8"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/buttonRowna"
        android:onClick="equalsClicked"/>
    <Button
        android:id="@+id/btn_operation_plus"
        style="@style/Button"
        android:layout_column="3"
        android:layout_row="8"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/buttonDodawanie"
        android:onClick="pressButton"/>
</GridLayout>